Fixes design issue on Safari

--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -313,20 +313,20 @@
               position: absolute;
               bottom: 0;
               right: 0;
+              height: 40px;
+              width: 40px;
+              background-color: $color-red;
 
               svg {
-                background-color: $color-red;
                 width: 40px;
                 height: 40px;
                 stroke: #fff;
 
-                path {
-                  transform-origin: center;
-                  transition: all 400ms cubic-bezier(0.32, 1.2, 0.87, 1.39);
-                }
+                transform-origin: center;
+                transition: all 400ms cubic-bezier(0.32, 1.2, 0.87, 1.39);
               }
 
-              &:hover svg path {
+              &:hover svg {
                 transform: rotate(90deg);
               }
             }
@@ -525,20 +525,19 @@
               position: absolute;
               bottom: 0;
               right: 0;
+              height: 40px;
+              width: 40px;
+              background-color: $color-orange;
 
               svg {
-                background-color: $color-orange;
                 width: 40px;
                 height: 40px;
                 stroke: #fff;
-
-                path {
-                  transform-origin: center;
-                  transition: all 400ms cubic-bezier(0.32, 1.2, 0.87, 1.39);
-                }
+                transform-origin: center;
+                transition: all 400ms cubic-bezier(0.32, 1.2, 0.87, 1.39);
               }
 
-              &:hover svg path {
+              &:hover svg {
                 transform: rotate(90deg);
               }
             }
