--- a/app/assets/stylesheets/pages/users/cards/edit.scss
+++ b/app/assets/stylesheets/pages/users/cards/edit.scss
@@ -55,7 +55,8 @@
     }
 
     input,
-    textarea {
+    textarea,
+    div.choices__inner {
       border: none;
       background-color: #f9f3f5;
       padding: 20px;
